--- a/Feature Selection/Recursive Feature Elimination/RFE_Regression.ipynb
+++ b/Feature Selection/Recursive Feature Elimination/RFE_Regression.ipynb
@@ -5,7 +5,6 @@
    "id": "3660247e-cb07-44cb-9c80-1913ea353017",
    "metadata": {},
    "source": [
-    "# Feature Selection\n",
     "## RFE (Recursive Feature Elimination) - Regression"
    ]
   },
@@ -44,7 +43,7 @@
    "outputs": [],
    "source": [
     "def RFEfeatures(indep_x,dep_y,n):\n",
-    "    rfefeatures = []\n",
+    "    rfelist = []\n",
     "    \n",
     "    log_model = LinearRegression()  \n",
     "    svc_model = SVC(kernel='linear',random_state = 0)\n",
@@ -53,11 +52,11 @@
     "    \n",
     "    rfemodellist = [log_model,svc_model,dc_model,rf_model]\n",
     "    for i in rfemodellist:\n",
-    "        rfe = RFE(i,n)\n",
+    "        rfe = RFE(estimator = i, n_features_to_select = n)\n",
     "        rfe.fit(indep_x,dep_y)\n",
-    "        main_features = rfe.transform(indep_x)\n",
-    "        rfefeatures.append(main_features)\n",
-    "    return rfefeatures\n",
+    "        rfe_features = rfe.transform(indep_x)\n",
+    "        rfelist.append(rfe_features)\n",
+    "    return rfelist\n",
     "\n",
     "def split_scalar(indep_x,dep_y):\n",
     "    x_train,x_test,y_train,y_test = train_test_split(indep_x, dep_y, test_size=0.2, random_state=0)\n",
@@ -66,12 +65,12 @@
     "    x_test = sc.transform(x_test)\n",
     "    return x_train,x_test,y_train,y_test\n",
     "\n",
-    "def R2_prediction(regressor,x_test):\n",
+    "def R2_prediction(regressor,x_test,y_test):\n",
     "    y_pred = regressor.predict(x_test)\n",
     "    \n",
     "    from sklearn.metrics import r2_score\n",
     "    R2_score = r2_score(y_test,y_pred)\n",
-    "    return regressor,R2_score,x_test,y_test\n",
+    "    return R2_score\n",
     "\n",
     "def linear(x_train,y_train,x_test):\n",
     "    from sklearn.linear_model import LinearRegression\n",
@@ -105,18 +104,18 @@
     "    from sklearn.ensemble import RandomForestRegressor\n",
     "    regressor = RandomForestRegressor(n_estimators = 10, criterion = 'absolute_error', max_features = 'sqrt', random_state=0)\n",
     "    regressor.fit(x_train,y_train)\n",
-    "    R2_score = R2_prediction(regressor,x_test)\n",
+    "    R2_score = R2_prediction(regressor,x_test,y_test)\n",
     "    return regressor,R2_score,x_test,y_test\n",
     "\n",
-    "def selectk_regression(r2log,r2svml,r2svmnl,r2dc,r2rf):\n",
+    "def rfe_regression(r2log,r2svml,r2svmnl,r2dc,r2rf):\n",
     "    \n",
-    "    dataframe = pd.DataFrame(index=['ChiSquare'], columns = ['Logistic','SVM_L','SVM_NL','Decision','Random'])\n",
-    "    for number,index in enumerate(dataframe.index):\n",
-    "        dataframe['Logistic'][index] = r2log[number]\n",
-    "        dataframe['SVM_L'][index] = r2svml[number] \n",
-    "        dataframe['SVM_NL'][index] = r2svmnl[number] \n",
-    "        dataframe['Decision'][index] = r2dc[number] \n",
-    "        dataframe['Random'][index] = r2rf[number] \n",
+    "    rfedataframe = pd.DataFrame(index=['ChiSquare'], columns = ['Logistic','SVM_L','SVM_NL','Decision','Random'])\n",
+    "    for number,index in enumerate(rfedataframe.index):\n",
+    "        rfedataframe['Logistic'][index] = r2log[number]\n",
+    "        rfedataframe['SVM_L'][index] = r2svml[number] \n",
+    "        rfedataframe['SVM_NL'][index] = r2svmnl[number] \n",
+    "        rfedataframe['Decision'][index] = r2dc[number] \n",
+    "        rfedataframe['Random'][index] = r2rf[number] \n",
     "    return dataframe"
    ]
   },
@@ -922,22 +921,9 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "RFE.__init__() takes 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m rfefeatures \u001b[38;5;241m=\u001b[39m RFEfeatures(indep_x,dep_y,\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m      3\u001b[0m r2log \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      4\u001b[0m r2svml \u001b[38;5;241m=\u001b[39m []\n",
-      "Cell \u001b[1;32mIn[2], line 11\u001b[0m, in \u001b[0;36mRFEfeatures\u001b[1;34m(indep_x, dep_y, n)\u001b[0m\n\u001b[0;32m      9\u001b[0m rfemodellist \u001b[38;5;241m=\u001b[39m [log_model,svc_model,dc_model,rf_model]\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m rfemodellist:\n\u001b[1;32m---> 11\u001b[0m     rfe \u001b[38;5;241m=\u001b[39m RFE(i,n)\n\u001b[0;32m     12\u001b[0m     rfe\u001b[38;5;241m.\u001b[39mfit(indep_x,dep_y)\n\u001b[0;32m     13\u001b[0m     main_features \u001b[38;5;241m=\u001b[39m rfe\u001b[38;5;241m.\u001b[39mtransform(indep_x)\n",
-      "\u001b[1;31mTypeError\u001b[0m: RFE.__init__() takes 2 positional arguments but 3 were given"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rfefeatures = RFEfeatures(indep_x,dep_y,2)\n",
+    "rfelist = RFEfeatures(indep_x,dep_y,3)\n",
     "\n",
     "r2log = []\n",
     "r2svml = []\n",
@@ -948,28 +934,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "77341633-8c28-4361-8539-f617cd0d2124",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "R2_prediction() missing 1 required positional argument: 'y_test'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m rfelist:\n\u001b[0;32m      2\u001b[0m     x_train,x_test,y_train,y_test \u001b[38;5;241m=\u001b[39m split_scalar(i,dep_y)\n\u001b[1;32m----> 4\u001b[0m     R2_score \u001b[38;5;241m=\u001b[39m linear(x_train,y_train,x_test)\n\u001b[0;32m      5\u001b[0m     r2log\u001b[38;5;241m.\u001b[39mappend(R2_score)\n\u001b[0;32m      7\u001b[0m     R2_score \u001b[38;5;241m=\u001b[39m svm_linear(x_train,y_train,x_test)\n",
+      "Cell \u001b[1;32mIn[2], line 35\u001b[0m, in \u001b[0;36mlinear\u001b[1;34m(x_train, y_train, x_test)\u001b[0m\n\u001b[0;32m     33\u001b[0m regressor \u001b[38;5;241m=\u001b[39m LinearRegression()\n\u001b[0;32m     34\u001b[0m regressor\u001b[38;5;241m.\u001b[39mfit(x_train,y_train)\n\u001b[1;32m---> 35\u001b[0m R2_score \u001b[38;5;241m=\u001b[39m R2_prediction(regressor,x_test)\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m regressor,R2_score,x_test,y_test\n",
+      "\u001b[1;31mTypeError\u001b[0m: R2_prediction() missing 1 required positional argument: 'y_test'"
+     ]
+    }
+   ],
    "source": [
-    "for i in rfefeatures:\n",
-    "    regressor,R2_score,x_test,y_test = linear(x_train,y_train,x_test)\n",
+    "for i in rfelist:\n",
+    "    x_train,x_test,y_train,y_test = split_scalar(i,dep_y)\n",
+    "    \n",
+    "    R2_score = linear(x_train,y_train,x_test)\n",
     "    r2log.append(R2_score)\n",
     "    \n",
-    "    regressor,R2_score,x_test,y_test = svm_linear(x_train,y_train,x_test)\n",
+    "    R2_score = svm_linear(x_train,y_train,x_test)\n",
     "    r2svml.append(R2_score)\n",
     "    \n",
-    "    regressor,R2_score,x_test,y_test= svm_nonlinear(x_train,y_train,x_test)\n",
+    "    R2_score = svm_nonlinear(x_train,y_train,x_test)\n",
     "    r2svmnl.append(R2_score)\n",
     "    \n",
-    "    regressor,R2_score,x_test,y_test = decision(x_train,y_train,x_test)\n",
+    "    R2_score = decision(x_train,y_train,x_test)\n",
     "    r2dc.append(R2_score)\n",
     "    \n",
-    "    regressor,R2_score,x_test,y_test = random(x_train,y_train,x_test)\n",
+    "    R2_score = random(x_train,y_train,x_test)\n",
     "    r2rf.append(R2_score)\n",
     "    \n",
-    "    result = selectk_regression(r2log,r2svml,r2svmnl,r2dc,r2rf)"
+    "result = rfe_regression(r2log,r2svml,r2svmnl,r2dc,r2rf)"
    ]
   },
   {
@@ -979,7 +980,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result"
+    "result\n",
+    "#3\n"
    ]
   }
  ],
